:sparkles: Introduce admin functionalities for deleting groups and users, and managing cache
